@@ -4,6 +4,7 @@
 * clean sense logging, use timestamps to specify delays in log printing
 * count number of dispatched jobs and log that
 * add version information command line option
+* add control of maximum number of children as command line option
 
 2009-07-09 dispatcher 0.9.95
 
